layout: Scroll-bar shift bad fix
The scroll-bar caused a layout shift between pages that had a scroll bar
and pages that did not. This was nasty and super noticeable because of
the margin lines component. This change updates the global.css file to
get rid of the scrollbar entirely for now. This may not be the approved
solution but it will do for now

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --scrollbar-width: calc(100vw - 100%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,6 +19,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding-right: var(--scrollbar-width);
 }
 
 @layer utilities {
@@ -91,5 +93,16 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+
+  * {
+    scrollbar-width: none;
   }
 }
